tests/errors/list_type_mismatch_multiplication.dang
# This should fail: mixing String and Int lists in multiplication
let result = [] * ["foo"] * [3]
